# WindowsUnifiedConnector

./: .gitignore  .gitmodules  BUILD_DEPENDENCIES.md  BUILD_PHASES.md  CONAN_MIGRATION_ANALYSIS.md  Directory.Build.props  END_TO_END_STATUS.md  GITHUB_ACTIONS_GUIDE.md  GlobalVersion.h  IMPLEMENTATION_CHECKLIST.md  JenkinsFile  JenkinsFile-Tagger  LOCAL_BUILD_GUIDE.md  README.md  REMOTE_BUILD_SETUP.md  SETUP_COMPLETE.md  SupportedOS.manifest  UnifiedConnector.sln  WindowsUnifiedConnector.sln  build.spec  conanfile.txt  pull_request_template.md  sign.bat
.github/workflows/: build.yml
Bootstrapper/: Bootstrapper.wixproj  Bundle.wxs
CSDL/: AdditionComponentList.json  OverrideComponentList.json
Docs/: CM.md
Install/Bootstrapper/: Bootstrapper.wixproj
Install/Installer/: Installer.wixproj  Product.wxs  config.wxi  en-us.wxl
Install/InstallerCustomActions/: CustomAction.cpp  CustomAction.def  IUcidFacade.h  InstallerCustomActions.rc  InstallerCustomActions.vcxproj  InstructionSet.h  MsiLogger.cpp  MsiLogger.h  PrivateFunctions.cpp  PrivateFunctions.h  UcidFacade.cpp  UcidFacade.h  resource.h  stdafx.h
Install/Tests/: Directory.Build.props  JenkinsFile  README.md  TestPackages.sln
Install/dllCaSupport/: CaSupport.cpp  CaSupport.h  CaSupportExports.h  EventFacade.cpp  EventFacade.h  IEventFacade.h  IUcidFacade.h  InstallerConfig.cpp  InstallerConfig.h  UcidFacade.cpp  (+3 more)
Installer/: Installer.wixproj  Product.wxs  config.wxi  en-us.wxl
MockLibraries/: README.md
PackageManager/: PackageManager.vcxproj  PackageManagerClient.vcxproj  README.md
PackageManager/PackageManagerClient/: CMakeLists.txt  CMakeSettings.json  ComponentPackageProcessor.cpp  ComponentPackageProcessor.h  IPackageConfigProcessor.h  IPmCloud.h  IPmManifest.h  IPmPlatformComponentManager.h  IPmPlatformConfiguration.h  PackageConfigProcessor.cpp  PackageConfigProcessor.h  PackageManager.cpp  PackageManagerClient.vcxproj  PackageManagerClient.vcxproj.filters  PackageManagerContainer.cpp  PackageManagerContainer.h  PmCloud.cpp  PmCloud.h  PmConfig.cpp  PmManifest.cpp  PmManifest.h  README.md  TokenAdapter.h
PackageManager/PackageManagerClient/docs/: request_M1.json  request_template.json  response_M1_INSTALL_IMMUNET.json
PackageManager/PackageManagerClient/pmLib/: CMakeLists.txt
PackageManager/PackageManagerClient/pmLib/include/: CertsAdapter.h  CheckinFormatter.h  CheckinManifestRetriever.h  ComponentPackageProcessor.h  ICertsAdapter.h  ICheckinFormatter.h  ICheckinManifestRetriever.h  IComponentPackageProcessor.h  IManifestProcessor.h  IPackageConfigProcessor.h  IPackageInventoryProvider.h  IPackageManager.h  IPmCloud.h  IPmConfig.h  IPmManifest.h  IPmPlatformComponentManager.h  IPmPlatformConfiguration.h  IPmPlatformDependencies.h  ITokenAdapter.h  ManifestProcessor.h  PackageInventoryProvider.h  PackageManager.h  PackageManagerContainer.h  PmCloud.h  PmConfig.h  PmManifest.h  PmTypes.h
PackageManager/PackageManagerClient/pmLib/src/: CertsAdapter.cpp  CheckinFormatter.cpp  CheckinManifestRetriever.cpp  ComponentPackageProcessor.cpp  ManifestProcessor.cpp  PackageConfigProcessor.cpp  PackageInventoryProvider.cpp  PackageManager.cpp  PackageManagerContainer.cpp  PmCloud.cpp  PmConfig.cpp  PmManifest.cpp  TokenAdapter.cpp
PackageManager/PackageManagerClient/tests/: CMakeLists.txt
PackageManager/PackageManagerClient/tests/ComponentTests/: CMakeLists.txt
PackageManager/PackageManagerClient/tests/ComponentTests/pmLibTests/: ComponentTestPacMan.cpp
PackageManager/PackageManagerClient/tests/ComponentTests/utilTests/: ComponentTestPmHttp.cpp  WindowsCertStore.h
PackageManager/PackageManagerClient/tests/UnitTests/: CMakeLists.txt
PackageManager/PackageManagerClient/tests/UnitTests/pmLibTests/: TestCheckinFormatter.cpp  TestCheckinManifestRetriever.cpp  TestComponentPackageProcessor.cpp  TestManifestProcessor.cpp  TestPmConfig.cpp  TestPmManifest.cpp
PackageManager/PackageManagerClient/tests/mocks/: CMakeLists.txt
PackageManager/PackageManagerClient/tests/mocks/pmLibMocks/: MockCertsAdapter.cpp  MockCertsAdapter.h  MockCheckinManifestRetriever.cpp  MockComponentPackageProcessor.cpp  MockComponentPackageProcessor.h  MockManifestProcessor.cpp  MockManifestProcessor.h  MockPackageConfigProcessor.h  MockPackageInventoryProvider.h  MockPmCloud.cpp  MockPmCloud.h  MockPmConfig.cpp  MockPmConfig.h  MockPmManifest.cpp  MockPmManifest.h  MockPmPlatformComponentManager.cpp  MockPmPlatformComponentManager.h  MockPmPlatformConfiguration.cpp  MockPmPlatformConfiguration.h  MockPmPlatformDependencies.cpp  MockPmPlatformDependencies.h
PackageManager/PackageManagerClient/tests/mocks/utilMocks/: MockFileUtil.cpp  MockFileUtil.h  MockPmHttp.cpp  MockPmHttp.h  MockSslUtil.cpp  MockSslUtil.h
PackageManager/PackageManagerClient/tests/utilTests/: TestPmHttp.cpp
PackageManager/PackageManagerClient/util/: CMakeLists.txt
PackageManager/PackageManagerClient/util/include/: FileUtil.h  IFileUtil.h  IPmHttp.h  IPmLogger.h  ISslUtil.h  PmHttp.h  PmLogger.h  SslUtil.h
PackageManager/PackageManagerClient/util/src/: FileUtil.cpp  PmHttp.cpp  PmLogger.cpp  SslUtil.cpp
PackageManager/cmake/libPmClient/: CMakeLists.txt
PackageManager/cmake/libPmCloud/: CMakeLists.txt
PackageManager/cmake/libPmConfig/: CMakeLists.txt
PackageManager/cmake/libPmUtil/: CMakeLists.txt
PackageManager/cmake/pmLib/: CMakeLists.txt
PackageManager/cmake/tests/UnitTests/: CMakeLists.txt
PackageManager/cmake/tests/mocks/: CMakeLists.txt
PackageManager/cmake/util/: CMakeLists.txt
Resources/: pmconfig.json
UCID/: README.md  UCID.vcxproj  UpdateUCID.ps1  config.xml
UCService/: HelperFunctions.cpp  HelperFunctions.h  Main.cpp  Main.h  ServiceBase.cpp  ServiceBase.h  ServiceInstaller.cpp  UCIDLoader.cpp  UCIDLoader.h  UCMCPLoader.cpp  UCMCPLoader.h  UCService.aps  UCService.cpp  UCService.h  UCService.rc  UCService.sln  UCService.vcxproj  UCService.vcxproj.filters  Version.h
config/: PM_MCP_config.json
libLogger/: IUcLogFile.h  IUcLogger.h  UcLogFile.cpp  UcLogger.cpp  UcLogger.h  libLogger.vcxproj  libLogger.vcxproj.filters
(+741 files in other folders)
